Added a DCOP interface for the part controller. Moved creation of the DCOP interfaces to the abstract base classes.

--- a/lib/interfaces/Makefile.am
+++ b/lib/interfaces/Makefile.am
@@ -8,7 +8,8 @@ libkdevinterfaces_la_SOURCES = kdevfactory.cpp kdevpart.cpp kdevcore.cpp kdevpro
 			       kdevpartcontroller.cpp kdevapi.cpp\
 			       KDevMakeFrontendIface.skel KDevMakeFrontendIface.cpp \
 			       KDevAppFrontendIface.skel KDevAppFrontendIface.cpp \
-			       KDevCoreIface.skel KDevCoreIface.cpp kdevtoplevel.cpp
+			       KDevCoreIface.skel KDevCoreIface.cpp kdevtoplevel.cpp \
+			       KDevPartControllerIface.skel KDevPartControllerIface.cpp
 
 kdevelopincludedir = $(includedir)/kdevelop
 kdevelopinclude_HEADERS = kdevfactory.h kdevpart.h kdevcore.h kdevproject.h \
