- made KDevApi a QObject - added KDevPlugin as successor of KDevPart

--- a/lib/interfaces/Makefile.am
+++ b/lib/interfaces/Makefile.am
@@ -9,13 +9,15 @@ libkdevinterfaces_la_SOURCES = kdevfactory.cpp kdevpart.cpp kdevcore.cpp kdevpro
 			       KDevMakeFrontendIface.skel KDevMakeFrontendIface.cpp \
 			       KDevAppFrontendIface.skel KDevAppFrontendIface.cpp \
 			       KDevCoreIface.skel KDevCoreIface.cpp kdevtoplevel.cpp \
-			       KDevPartControllerIface.skel KDevPartControllerIface.cpp
+			       KDevPartControllerIface.skel KDevPartControllerIface.cpp \
+			       kdevplugin.cpp
 
 kdevelopincludedir = $(includedir)/kdevelop
 kdevelopinclude_HEADERS = kdevfactory.h kdevpart.h kdevcore.h kdevproject.h \
 			  kdevlanguagesupport.h kdevversioncontrol.h \
 			  kdevmakefrontend.h kdevappfrontend.h kdevcompileroptions.h \
-			  KDevMakeFrontendIface.h KDevAppFrontendIface.h KDevCoreIface.h
+			  KDevMakeFrontendIface.h KDevAppFrontendIface.h KDevCoreIface.h \
+			  kdevplugin.h
 
 noinst_HEADERS = kdevapi.h
 
