- added kdevelop/plugin servicetype - made kdevelop/part inherit from kdevelop/plugin (to avoid duplicate   definition of certain properties, and it makes sense design wise, too :)

--- a/lib/interfaces/Makefile.am
+++ b/lib/interfaces/Makefile.am
@@ -24,6 +24,7 @@ noinst_HEADERS = kdevapi.h
 servicetypedir = $(kde_servicetypesdir)
 servicetype_DATA = kdeveloppart.desktop kdevelopcompileroptions.desktop \
 		   kdevelopmakefrontend.desktop kdevelopappfrontend.desktop \
-		   kdevelopproject.desktop kdeveloplanguagesupport.desktop
+		   kdevelopproject.desktop kdeveloplanguagesupport.desktop \
+		   kdevelopplugin.desktop
 
 METASOURCES = AUTO
