- made appfrontend, compileroptions, langsupport, makefrontend,   project and versioncontrol service types inherit from KDevelop/Part,   to reflect the class design. That also allowed removing the duplicated   service type property defitions, fixing the annoying kbuildsycoca   warning. What's left is the double definition of the Language property.   I'm not sure how to solve that, yet.

--- a/lib/interfaces/kdevelopappfrontend.desktop
+++ b/lib/interfaces/kdevelopappfrontend.desktop
@@ -2,7 +2,6 @@
 Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KDevelop/AppFrontend
+X-KDE-Derived=KDevelop/Part
 Name=App frontend interface
 
-[PropertyDef::X-KDevelop-Args]
-Type=QString
