--- a/lib/interfaces/kdevelopcompileroptions.desktop
+++ b/lib/interfaces/kdevelopcompileroptions.desktop
@@ -2,10 +2,8 @@
 Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KDevelop/CompilerOptions
+X-KDE-Derived=KDevelop/Part
 Name=KDevelop Compiler Options Dialog Interface
-
-[PropertyDef::X-KDevelop-Args]
-Type=QString
 
 [PropertyDef::X-KDevelop-Language]
 Type=QString
