--- a/lib/interfaces/kdeveloplanguagesupport.desktop
+++ b/lib/interfaces/kdeveloplanguagesupport.desktop
@@ -2,10 +2,8 @@
 Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KDevelop/LanguageSupport
+X-KDE-Derived=KDevelop/Part
 Name=KDevelop Language Support Interface
-
-[PropertyDef::X-KDevelop-Args]
-Type=QString
 
 [PropertyDef::X-KDevelop-Language]
 Type=QString
