--- a/lib/interfaces/kdevelopplugin.desktop
+++ b/lib/interfaces/kdevelopplugin.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KDevelop/Plugin
-Name=KDevelop Part
+Name=KDevelop Plugin
 
 [PropertyDef::X-KDevelop-Scope]
 Type=QString
