--- a/lib/interfaces/kdevelopproject.desktop
+++ b/lib/interfaces/kdevelopproject.desktop
@@ -2,7 +2,6 @@
 Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KDevelop/Project
+X-KDE-Derived=KDevelop/Part
 Name=KDevelop Project Interface
 
-[PropertyDef::X-KDevelop-Args]
-Type=QString
