--- a/lib/interfaces/kdevelopversioncontrol.desktop
+++ b/lib/interfaces/kdevelopversioncontrol.desktop
@@ -2,7 +2,6 @@
 Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KDevelop/VersionControl
+X-KDE-Derived=KDevelop/Part
 Name=KDevelop Version Control Interface
 
-[PropertyDef::X-KDevelop-Args]
-Type=QString
