--- a/parts/classview/Makefile.am
+++ b/parts/classview/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/sourceinfo $(all_includes)
 
-lib_LTLIBRARIES = libkdevclassview.la
+kde_module_LTLIBRARIES = libkdevclassview.la
 libkdevclassview_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevclassview_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
