--- a/parts/grepview/Makefile.am
+++ b/parts/grepview/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
 
-lib_LTLIBRARIES = libkdevgrepview.la
+kde_module_LTLIBRARIES = libkdevgrepview.la
 libkdevgrepview_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevgrepview_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
