--- a/plugins/gccoptions/Makefile.am
+++ b/plugins/gccoptions/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
 
-lib_LTLIBRARIES = libkdevgccoptions.la
+kde_module_LTLIBRARIES = libkdevgccoptions.la
 libkdevgccoptions_la_LDFLAGS = $(all_libraries) -version-info 1:0 $(KDE_PLUGIN)
 libkdevgccoptions_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
