--- a/plugins/pgioptions/Makefile.am
+++ b/plugins/pgioptions/Makefile.am
@@ -3,7 +3,7 @@
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
 
-lib_LTLIBRARIES = libkdevpgioptions.la
+kde_module_LTLIBRARIES = libkdevpgioptions.la
 libkdevpgioptions_la_LDFLAGS = $(all_libraries) -version-info 1:0 $(KDE_PLUGIN)
 libkdevpgioptions_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
