--- a/parts/abbrev/Makefile.am
+++ b/parts/abbrev/Makefile.am
@@ -6,8 +6,7 @@ kde_module_LTLIBRARIES = libkdevabbrev.la
 libkdevabbrev_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevabbrev_la_LIBADD = $(top_builddir)/lib/libkdevelop.la -lktexteditor
 
-libkdevabbrev_la_SOURCES = abbrevfactory.cpp \
-			   abbrevpart.cpp \
+libkdevabbrev_la_SOURCES = abbrevpart.cpp \
 			   abbrevconfigwidget.cpp \
 			   abbrevconfigwidgetbase.ui \
 			   addtemplatedlg.cpp \
