- ported to KDP/KGF

--- a/parts/grepview/Makefile.am
+++ b/parts/grepview/Makefile.am
@@ -6,8 +6,7 @@ kde_module_LTLIBRARIES = libkdevgrepview.la
 libkdevgrepview_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevgrepview_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevgrepview_la_SOURCES = grepviewfactory.cpp \
-			     grepviewpart.cpp \
+libkdevgrepview_la_SOURCES = grepviewpart.cpp \
 			     grepviewwidget.cpp \
 			     grepdlg.cpp \
 			     grepconfigwidget.cpp
