- ported to KGenericFactory and KDevPlugin

--- a/parts/customproject/Makefile.am
+++ b/parts/customproject/Makefile.am
@@ -6,8 +6,7 @@ kde_module_LTLIBRARIES = libkdevcustomproject.la
 libkdevcustomproject_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevcustomproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevcustomproject_la_SOURCES = customprojectfactory.cpp \
-				  customprojectpart.cpp \
+libkdevcustomproject_la_SOURCES = customprojectpart.cpp \
 				  customprojectwidget.cpp \
 				  makeoptionswidget.cpp \
 				  makeoptionswidgetbase.ui \
