--- a/parts/fileselector/Makefile.am
+++ b/parts/fileselector/Makefile.am
@@ -6,8 +6,7 @@ kde_module_LTLIBRARIES = libkdevfileselector.la
 libkdevfileselector_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfileselector_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevfileselector_la_SOURCES = fileselector_factory.cpp \
-                                  fileselector_part.cpp \
+libkdevfileselector_la_SOURCES = fileselector_part.cpp \
                                   fileselectorwidget.cpp
 
 METASOURCES = AUTO
