--- a/parts/fileview/Makefile.am
+++ b/parts/fileview/Makefile.am
@@ -6,8 +6,7 @@ kde_module_LTLIBRARIES = libkdevfileview.la
 libkdevfileview_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfileview_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevfileview_la_SOURCES = fileviewfactory.cpp \
-			     fileviewpart.cpp \
+libkdevfileview_la_SOURCES = fileviewpart.cpp \
 			     fileviewwidget.cpp \
 			     addfilegroupdlg.cpp \
 			     fileviewconfigwidget.cpp \
