Only for JVM programs

--- a/parts/javadebugger/kdevjavadebugger.desktop
+++ b/parts/javadebugger/kdevjavadebugger.desktop
@@ -9,3 +9,4 @@ ServiceTypes=KDevelop/Part
 X-KDE-Library=libkdevjavadebugger
 X-KDevelop-Scope=Project
 X-KDevelop-ProgrammingLanguages=Java
+Keywords=JVM
