Try really hard to guess the correct project type

--- a/parts/appwizard/imports/Makefile.am
+++ b/parts/appwizard/imports/Makefile.am
@@ -2,10 +2,10 @@ appwizarddatadir = ${kde_datadir}/kdevappwizard
 importsdir = ${appwizarddatadir}/imports
 importfilesdir = ${appwizarddatadir}/importfiles
 
-imports_DATA =     c-auto cpp-auto fortran kde gnome java \
-                   c cpp python php perl qttmake
-importfiles_DATA = c-auto.kdevelop cpp-auto.kdevelop fortran.kdevelop \
-		   kde.kdevelop gnome.kdevelop java.kdevelop \
-		   c.kdevelop cpp.kdevelop python.kdevelop php.kdevelop perl.kdevelop \
-		   qttmake.kdevelop
+imports_DATA =     c-auto cpp-auto fortran-auto java-auto kde gnome \
+                   c cpp fortran python php perl qttmake
+importfiles_DATA = c-auto.kdevelop cpp-auto.kdevelop fortran-auto.kdevelop \
+		   kde.kdevelop gnome.kdevelop java-auto.kdevelop \
+		   c.kdevelop cpp.kdevelop fortran.kdevelop \
+		   python.kdevelop php.kdevelop perl.kdevelop qttmake.kdevelop
 
