Class for file template substitution

--- a/lib/util/Makefile.am
+++ b/lib/util/Makefile.am
@@ -1,12 +1,12 @@
 INCLUDES = -I$(top_srcdir)/lib/interfaces \
 	   -I$(top_srcdir)/lib/sourceinfo \
-	   $(QT3STUFFINCLUDES) \
 	   $(all_includes)
 
 noinst_LTLIBRARIES = libkdevutil.la
 
 libkdevutil_la_SOURCES = processwidget.cpp \
 			 domutil.cpp \
-			 splitter.cpp
+			 splitter.cpp \
+			 filetemplate.cpp
 
 METASOURCES = AUTO
