--- a/parts/scripting/Makefile.am
+++ b/parts/scripting/Makefile.am
@@ -9,8 +9,7 @@ kde_module_LTLIBRARIES = libkdevscripting.la
 libkdevscripting_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevscripting_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(PYTHONLIB) $(LIBPYTHON)
 
-libkdevscripting_la_SOURCES = scriptingfactory.cpp \
-			      scriptingpart.cpp \
+libkdevscripting_la_SOURCES = scriptingpart.cpp \
 			      pydcopc.cpp
 
 METASOURCES = AUTO
