--- a/parts/uimode/Makefile.am
+++ b/parts/uimode/Makefile.am
@@ -4,7 +4,7 @@ kde_module_LTLIBRARIES = libkdevuichooser.la
 libkdevuichooser_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevuichooser_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevuichooser_la_SOURCES = uichooser_factory.cpp uichooser_part.cpp uichooser.ui uichooser_widget.cpp
+libkdevuichooser_la_SOURCES = uichooser_part.cpp uichooser.ui uichooser_widget.cpp
 
 METASOURCES = AUTO
 
