--- a/parts/visualboyadvance/Makefile.am
+++ b/parts/visualboyadvance/Makefile.am
@@ -4,7 +4,7 @@ kde_module_LTLIBRARIES = libkdevvisualboyadvance.la
 libkdevvisualboyadvance_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevvisualboyadvance_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevvisualboyadvance_la_SOURCES = visualboyadvance_factory.cpp visualboyadvance_part.cpp vbaconfigwidgetbase.ui \
+libkdevvisualboyadvance_la_SOURCES = visualboyadvance_part.cpp vbaconfigwidgetbase.ui \
 					vbaconfigwidget.cpp
 
 METASOURCES = AUTO
