- ported to KGenericFactory

--- a/plugins/gccoptions/Makefile.am
+++ b/plugins/gccoptions/Makefile.am
@@ -6,8 +6,7 @@ kde_module_LTLIBRARIES = libkdevgccoptions.la
 libkdevgccoptions_la_LDFLAGS = $(all_libraries) -version-info 1:0 $(KDE_PLUGIN)
 libkdevgccoptions_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevgccoptions_la_SOURCES = gccoptionsfactory.cpp \
-			       gccoptionsplugin.cpp \
+libkdevgccoptions_la_SOURCES = gccoptionsplugin.cpp \
 			       flagboxes.cpp
 
 METASOURCES = AUTO
