--- a/parts/fileview/Makefile.am
+++ b/parts/fileview/Makefile.am
@@ -1,6 +1,9 @@
 # Here resides the file view part.
 
-INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/sourceinfo $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces \
+	   -I$(top_srcdir)/lib/sourceinfo \
+	   -I$(top_srcdir)/lib/util \
+	   $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevfileview.la
 libkdevfileview_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
