- these two plugins are modules and therefore have no version info

--- a/plugins/gccoptions/Makefile.am
+++ b/plugins/gccoptions/Makefile.am
@@ -3,7 +3,7 @@
 INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevgccoptions.la
-libkdevgccoptions_la_LDFLAGS = $(all_libraries) -version-info 1:0 $(KDE_PLUGIN)
+libkdevgccoptions_la_LDFLAGS = $(all_libraries) -module $(KDE_PLUGIN)
 libkdevgccoptions_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevgccoptions_la_SOURCES = gccoptionsplugin.cpp \
