--- a/plugins/pgioptions/Makefile.am
+++ b/plugins/pgioptions/Makefile.am
@@ -4,7 +4,7 @@
 INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevpgioptions.la
-libkdevpgioptions_la_LDFLAGS = $(all_libraries) -version-info 1:0 $(KDE_PLUGIN)
+libkdevpgioptions_la_LDFLAGS = $(all_libraries) -module $(KDE_PLUGIN)
 libkdevpgioptions_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevpgioptions_la_SOURCES = pgioptionsfactory.cpp \
