--- a/parts/perlsupport/Makefile.am
+++ b/parts/perlsupport/Makefile.am
@@ -6,8 +6,7 @@ kde_module_LTLIBRARIES = libkdevperlsupport.la kio_perldoc.la
 libkdevperlsupport_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevperlsupport_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevperlsupport_la_SOURCES = perlsupportfactory.cpp \
-				perlsupportpart.cpp
+libkdevperlsupport_la_SOURCES = perlsupportpart.cpp
 
 kio_perldoc_la_SOURCES = perldoc.cpp
 kio_perldoc_la_LIBADD = $(LIB_KIO)
