Moved the window menu code to a plugin.

--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -8,6 +8,6 @@ SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  debugger javadebugger distpart \
 	  konsole astyle tools ctags regexptest cvs doxygen \
 	  manager fileselector visualboyadvance tipofday abbrev \
-	  uimode editor-chooser openwith\
+	  uimode editor-chooser openwith windowmenu \
 	  $(SCRIPTING_SUBDIR) $(JAVA_SUBDIRS) 
 
