* Share code between project management parts by   moving stuff to lib/project * Separated file tree from custom and scripting   project parts into file view part, so that the   project parts do not have widgets themselves.   Hierchical file tree is KDirWatch'ed * Builddir and build tool can be configured in   custom project now * Merged KDevProject::openProject() and setProjectName() * Added the notion of an activeDirectory() in which   new files are stored * cerr -> kdDebug

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -10,8 +10,9 @@ libkdevelop_la_LDFLAGS = $(all_libraries) -no-undefined -version-info 1:0
 libkdevelop_la_LIBADD = $(top_builddir)/lib/interfaces/libkdevinterfaces.la \
 			$(top_builddir)/lib/sourceinfo/libkdevsourceinfo.la \
 			$(top_builddir)/lib/util/libkdevutil.la \
+			$(top_builddir)/lib/project/libkdevproject.la \
 			$(LIB_KPARTS) $(LIB_KIO)
 libkdevelop_la_SOURCES = dummy.cpp
 
 
-SUBDIRS = interfaces sourceinfo util structure widgets qextmdi
+SUBDIRS = interfaces sourceinfo util project widgets qextmdi
