--- a/parts/customproject/Makefile.am
+++ b/parts/customproject/Makefile.am
@@ -1,18 +1,17 @@
 # Here resides the custom project part.
 
-INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces \
+	   -I$(top_srcdir)/lib/project \
+	   -I$(top_srcdir)/lib/util \
+	   $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevcustomproject.la
 libkdevcustomproject_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevcustomproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevcustomproject_la_SOURCES = customprojectpart.cpp \
-				  customprojectwidget.cpp \
-				  makeoptionswidget.cpp \
-				  makeoptionswidgetbase.ui \
-				  runoptionswidget.cpp \
-				  runoptionswidgetbase.ui \
-				  addenvvardlg.cpp
+				  custombuildoptionswidgetbase.ui \
+				  custombuildoptionswidget.cpp
 
 METASOURCES = AUTO
 
