thought I try something

--- a/parts/appwizard/kcmodule/module.desktop
+++ b/parts/appwizard/kcmodule/module.desktop
@@ -6,6 +6,6 @@ Keywords=|APPNAME|,|APPNAMELC|
 Name=The |APPNAME| applet
 Terminal=false
 Type=Application
-X-KDE-FactoryName=kcm|APPNAMELC|
-X-KDE-Library=kcm|APPNAMELC|
+X-KDE-FactoryName=|APPNAMELC|
+X-KDE-Library=|APPNAMELC|
 X-KDE-ModuleType=Library
