--- a/parts/appwizard/kcmodule/src-Makefile.am
+++ b/parts/appwizard/kcmodule/src-Makefile.am
@@ -2,11 +2,11 @@ INCLUDES    = $(all_includes)
 METASOURCES = AUTO
 
 # Install this plugin in the KDE modules directory
-kde_module_LTLIBRARIES = libkcm_$APPNAMELC$.la
+kde_module_LTLIBRARIES = kcm_$APPNAMELC$.la
 
-libkcm_$APPNAMELC$_la_SOURCES = $APPNAMELC$.cpp
-libkcm_$APPNAMELC$_la_LIBADD = $(LIB_KDEUI)
-libkcm_$APPNAMELC$_la_LDFLAGS = -module -avoid-version $(all_libraries) -no-undefined
+kcm_$APPNAMELC$_la_SOURCES = $APPNAMELC$.cpp
+kcm_$APPNAMELC$_la_LIBADD = $(LIB_KDEUI)
+kcm_$APPNAMELC$_la_LDFLAGS = -module -avoid-version $(all_libraries) -no-undefined
 
 $APPNAMELC$_DATA = $APPNAMELC$.desktop
 $APPNAMELC$dir = $(kde_appsdir/Settings/$APPNAME$
