Populate Build->Build Target menu in CustomProject with targets from Makefile, build.xml resp.

--- a/parts/customproject/kdevcustomproject.rc
+++ b/parts/customproject/kdevcustomproject.rc
@@ -3,6 +3,7 @@
 <MenuBar>
   <Menu name="build" >
     <Action name="build_build" />
+    <Action name="build_target" />
     <Action name="build_clean" />
     <Separator/>
     <Action name="build_execute" />
