--- a/parts/appwizard/kicker/applet.desktop
+++ b/parts/appwizard/kicker/applet.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Encoding=UTF-8
-Comment=A panel applet called |NAME|
-Name=|NAMELITTLE|
-X-KDE-Library=lib|NAMELITTLE|
+Comment=A panel applet called $NAME$
+Name=$APPNAMELC$
+X-KDE-Library=lib$APPNAMELC$
