--- a/parts/appwizard/gnomeapp/app.desktop
+++ b/parts/appwizard/gnomeapp/app.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=|PRJNAME|
+Name=$APPNAME$
 Comment=
-Exec=|NAMELITTLE|
-Icon=|NAMELITTLE|-logo.png
+Exec=$APPNAMELC$
+Icon=$APPNAMELC$-logo.png
 Terminal=0
 Type=Application
