-          -I$(top_srcdir)/lib/project \ +          -I$(top_srcdir)/lib/project -I$(top_builddir)/lib/project \

--- a/parts/autoproject/Makefile.am
+++ b/parts/autoproject/Makefile.am
@@ -1,7 +1,7 @@
 # Here resides the automake project part.
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces \
-	   -I$(top_srcdir)/lib/project \
+	   -I$(top_srcdir)/lib/project -I$(top_builddir)/lib/project \
 	   -I$(top_srcdir)/lib/util \
 	   $(all_includes)
 
@@ -39,3 +39,4 @@ service_DATA = kdevautoproject.desktop kdevkdeautoproject.desktop
 
 rcdir = $(kde_datadir)/kdevautoproject
 rc_DATA = kdevautoproject.rc
+
