Import for ant based Java projects

--- a/parts/appwizard/imports/Makefile.am
+++ b/parts/appwizard/imports/Makefile.am
@@ -3,9 +3,10 @@ importsdir = ${appwizarddatadir}/imports
 importfilesdir = ${appwizarddatadir}/importfiles
 
 imports_DATA =     c-auto cpp-auto fortran-auto java-auto kde gnome \
-                   c cpp fortran python php perl qttmake
+                   c cpp fortran python php perl java java-ant qttmake
 importfiles_DATA = c-auto.kdevelop cpp-auto.kdevelop fortran-auto.kdevelop \
-		   kde.kdevelop gnome.kdevelop java-auto.kdevelop \
+		   java-auto.kdevelop kde.kdevelop gnome.kdevelop \
 		   c.kdevelop cpp.kdevelop fortran.kdevelop \
-		   python.kdevelop php.kdevelop perl.kdevelop qttmake.kdevelop
+		   python.kdevelop php.kdevelop perl.kdevelop \
+		   java.kdevelop java-ant.kdevelop qttmake.kdevelop
 
