--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,7 @@ bin_PROGRAMS = gideon
 gideon_SOURCES = main.cpp toplevel_mdi.cpp core.cpp partcontroller.cpp \
 		 projectmanager.cpp plugincontroller.cpp api.cpp \
 		 partselectwidget.cpp settingswidget.ui toplevel.cpp \
-		 toplevel_sdi.cpp statusbar.cpp
+		 toplevel_sdi.cpp statusbar.cpp editorproxy.cpp
 
 gideon_METASOURCES = AUTO
 gideon_LDFLAGS = $(all_libraries) $(KDE_RPATH) 
