* In script projects, scan the source file list   at loading time with configurable include   and exclude pattern lists * New file dialog in script project * Implemented KDevLanguageSupport::fileFilters()   for Python, Perl and PHP * grep part shows the exit status of the sub process

--- a/parts/scriptproject/Makefile.am
+++ b/parts/scriptproject/Makefile.am
@@ -11,12 +11,15 @@ kde_module_LTLIBRARIES = libkdevscriptproject.la
 libkdevscriptproject_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevscriptproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevscriptproject_la_SOURCES = scriptprojectpart.cpp
+libkdevscriptproject_la_SOURCES = scriptprojectpart.cpp \
+				  scriptoptionswidget.cpp \
+				  scriptoptionswidgetbase.ui \
+				  scriptnewfiledlg.cpp
 
 METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
 service_DATA = kdevscriptproject.desktop
 
-#rcdir = $(kde_datadir)/kdevscriptproject
-#rc_DATA = kdevscriptproject.rc
+rcdir = $(kde_datadir)/kdevscriptproject
+rc_DATA = kdevscriptproject.rc
