* If no compiler is set explicitly by the user,   use the options widget of the default compiler   (Property X-KDevelop-Default in the .desktop file) * Implemented setting active target in autoproject   part and set a default one in most app templates * Set resize policy of list views to LastColumn

--- a/lib/interfaces/kdevelopcompileroptions.desktop
+++ b/lib/interfaces/kdevelopcompileroptions.desktop
@@ -7,3 +7,6 @@ Name=KDevelop Compiler Options Dialog Interface
 
 [PropertyDef::X-KDevelop-Language]
 Type=QString
+
+[PropertyDef::X-KDevelop-Default]
+Type=bool
