--- a/plugins/gccoptions/kdevg77options.desktop
+++ b/plugins/gccoptions/kdevg77options.desktop
@@ -8,3 +8,4 @@ ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevgccoptions
 X-KDevelop-Language=Fortran
 X-KDevelop-Args=g77
+X-KDevelop-Default=true
