--- a/plugins/gccoptions/kdevgppoptions.desktop
+++ b/plugins/gccoptions/kdevgppoptions.desktop
@@ -8,3 +8,4 @@ ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevgccoptions
 X-KDevelop-Language=C++
 X-KDevelop-Args=g++
+X-KDevelop-Default=true
