--- a/plugins/gccoptions/kdevgccoptions.desktop
+++ b/plugins/gccoptions/kdevgccoptions.desktop
@@ -8,3 +8,5 @@ ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevgccoptions
 X-KDevelop-Language=C
 X-KDevelop-Args=gcc
+X-KDevelop-Default=true
+
