enable sourcenav build

--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -9,5 +9,6 @@ SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  konsole astyle tools ctags regexptest cvs doxygen \
 	  manager fileselector visualboyadvance tipofday abbrev filter \
 	  uimode editor-chooser openwith windowmenu \
+          sourcenav\
 	  $(SCRIPTING_SUBDIR) $(JAVA_SUBDIRS) 
 
