Added history part, allowing back/forward navigation between the parts.

--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -8,7 +8,7 @@ SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  debugger javadebugger distpart \
 	  konsole astyle tools ctags regexptest cvs doxygen \
 	  manager fileselector visualboyadvance tipofday abbrev filter \
-	  uimode editor-chooser openwith windowmenu \
+	  uimode editor-chooser openwith windowmenu history \
           sourcenav \
 	  $(SCRIPTING_SUBDIR) $(JAVA_SUBDIRS) 
 
