--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,7 @@ gideon_SOURCES = main.cpp toplevel_mdi.cpp core.cpp partcontroller.cpp \
 		 projectmanager.cpp plugincontroller.cpp api.cpp \
 		 partselectwidget.cpp settingswidget.ui toplevel.cpp \
 		 toplevel_sdi.cpp statusbar.cpp editorproxy.cpp \
-		 debugger.cpp documentationpart.cpp
+		 debugger.cpp documentationpart.cpp splashscreen.cpp
 
 gideon_METASOURCES = AUTO
 gideon_LDFLAGS = $(all_libraries) $(KDE_RPATH) 
