* fixed some broken stuff (load project on startup,GBA support,php code completion) * codeCompletion/realtimeparser is now configurable (GUI)

--- a/parts/phpsupport/Makefile.am
+++ b/parts/phpsupport/Makefile.am
@@ -6,8 +6,8 @@ kde_module_LTLIBRARIES = libkdevphpsupport.la
 libkdevphpsupport_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevphpsupport_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(LIB_KHTML) -lktexteditor
 
-libkdevphpsupport_la_SOURCES = phpsupportpart.cpp phpconfigwidgetbase.ui \
-				phpconfigwidget.cpp phpinfodlg.ui phphtmlview.cpp \
+libkdevphpsupport_la_SOURCES = phpsupportpart.cpp phpconfigwidgetbase.ui phpconfigparserwidgetbase.ui \
+				phpconfigwidget.cpp phpinfodlg.ui phphtmlview.cpp phpconfigparserwidget.cpp \
 				phperrorview.cpp phpconfigdata.cpp \
 				phpcodecompletion.cpp phpparser.cpp \
 				phpnewclassdlgbase.ui phpnewclassdlg.cpp
