don't install yet

--- a/doc/libc/Makefile.am
+++ b/doc/libc/Makefile.am
@@ -28,8 +28,8 @@ libc.index: $(srcdir)/libc.index.in
 	echo "" >> libc.index
 
 install-data-local:
-	$(mkinstalldirs) $(DESTDIR)$(htmldir) ; \
-	$(INSTALL_DATA) $(srcdir)/*.html $(DESTDIR)$(htmldir)
+	#$(mkinstalldirs) $(DESTDIR)$(htmldir) ; \
+	#$(INSTALL_DATA) $(srcdir)/*.html $(DESTDIR)$(htmldir)
 
 #dist-hook:
 #	mkdir -p $(distdir) ; \
